--- a/src/main/resources/views/modules/customer/customerList.html
+++ b/src/main/resources/views/modules/customer/customerList.html
@@ -30,7 +30,7 @@
 				<div class="form-group">
 					<label class="control-label">${text('车型')}：</label>
 					<div class="control-inline width-120">
-						<#form:select path="carTypeId" dictType="" blankOption="true" class="form-control"/>
+						<#form:select path="carType" dictType="" blankOption="true" class="form-control"/>
 					</div>
 				</div>
 				<div class="form-group">
@@ -60,7 +60,7 @@ $('#dataGrid').dataGrid({
 		}},
 		{header:'${text("车牌号")}', name:'plateNumber', index:'a.plate_number', width:150, align:"left"},
 		{header:'${text("客户地址")}', name:'address', index:'a.address', width:150, align:"left"},
-		{header:'${text("车型")}', name:'carTypeId', index:'a.car_type_id', width:150, align:"center", formatter: function(val, obj, row, act){
+		{header:'${text("车型")}', name:'carType', index:'a.car_type', width:150, align:"center", formatter: function(val, obj, row, act){
 			return js.getDictLabel(${@DictUtils.getDictListJson('')}, val, '${text("未知")}', true);
 		}},
 		{header:'${text("联系电话")}', name:'phoneNumber', index:'a.phone_number', width:150, align:"center"},
