--- a/src/main/resources/views/modules/customer/customerForm.html
+++ b/src/main/resources/views/modules/customer/customerForm.html
@@ -28,7 +28,7 @@
 							<label class="control-label col-sm-4" title="">
 								<span class="required ">*</span> ${text('车牌号')}：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-								<#form:input path="plateNumber" maxlength="20" class="form-control required"/>
+								<#form:input path="plateNumber" maxlength="20" class="form-control required carNumber"/>
 							</div>
 						</div>
 					</div>
