--- a/src/main/resources/views/modules/check/checkBillList.html
+++ b/src/main/resources/views/modules/check/checkBillList.html
@@ -73,21 +73,19 @@
 $('#dataGrid').dataGrid({
 	searchForm: $("#searchForm"),
 	columnModel: [
-		{header:'${text("检测单号")}', name:'billId', index:'a.bill_id', width:150, align:"left", frozen:true, formatter: function(val, obj, row, act){
-			return '<a href="${ctx}/check/checkBill/form?id='+row.id+'" class="btnList" data-title="${text("编辑检测单表")}">'+(val||row.id)+'</a>';
-		}},
-		{header:'${text("检测时间")}', name:'checkTime', index:'a.check_time', width:150, align:"center"},
-		{header:'${text("车牌号")}', name:'plateNumber', index:'a.plate_number', width:150, align:"center"},
-		{header:'${text("客户编号")}', name:'customerId', index:'a.customer_id', width:150, align:"center"},
+		{header:'${text("检测单号")}', name:'billId', index:'a.bill_id', width:150, align:"left", frozen:true},
+		{header:'${text("检测时间")}', name:'checkTime', index:'a.check_time', width:200, align:"center"},
+		{header:'${text("车牌号")}', name:'plateNumber', index:'a.plate_number', width:100, align:"center"},
+		{header:'${text("客户编号")}', name:'customerId', index:'a.customer_id', width:200, align:"center"},
 		{header:'${text("客户名称")}', name:'customerName', index:'a.customer_name', width:150, align:"center"},
 		{header:'${text("联系方式")}', name:'customerPhoneNumber', index:'a.customer_phone_number', width:150, align:"center"},
 		{header:'${text("客户地址")}', name:'customerAddress', index:'a.customer_address', width:150, align:"left"},
 		{header:'${text("车型")}', name:'carType', index:'a.car_type', width:150, align:"center"},
-		{header:'${text("操作")}', name:'actions', width:120, sortable:false, title:false, formatter: function(val, obj, row, act){
+		{header:'${text("操作")}', name:'actions', width:120, sortable:false, title:false, align:"center", formatter: function(val, obj, row, act){
 			var actions = [];
 			<% if(hasPermi('check:checkBill:edit')){ %>
-				actions.push('<a href="${ctx}/check/checkBill/form?id='+row.id+'" class="btnList" title="${text("编辑检测单表")}"><i class="fa fa-pencil"></i></a>&nbsp;');
-				actions.push('<a href="${ctx}/check/checkBill/delete?id='+row.id+'" class="btnList" title="${text("删除检测单表")}" data-confirm="${text("确认要删除该检测单表吗？")}"><i class="fa fa-trash-o"></i></a>&nbsp;');
+				actions.push('<a href="${ctx}/check/checkBill/detail?id='+row.id+'" class="btnList btn btn-success btn-sm" title="${text("详情")}">详情</a>&nbsp;');
+				actions.push('<button onclick="tuidan('+row.id+')" class="btnList btn-danger btn btn-sm " title="${text("退单")}"> 退单 </button>&nbsp;');
 			<% } %>
 			return actions.join('');
 		}}
@@ -100,9 +98,13 @@ $('#dataGrid').dataGrid({
 
 $('#exportButton').click(function () {
 	var param = $("#searchForm").serialize();
-    log(param);
-
     window.location.href="${ctx}/check/checkBill/export/excel?"+param;
 
 });
+
+function tuidan(id) {
+	log(id);
+}
+
+
 </script>
