--- a/src/main/resources/views/modules/customer/customerList.html
+++ b/src/main/resources/views/modules/customer/customerList.html
@@ -1,14 +1,14 @@
-<% layout('/layouts/default.html', {title: '客户表管理', libs: ['dataGrid']}){ %>
+<% layout('/layouts/default.html', {title: '客户管理', libs: ['dataGrid']}){ %>
 <div class="main-content">
 	<div class="box box-main">
 		<div class="box-header">
 			<div class="box-title">
-				<i class="fa fa-list-alt"></i> ${text('客户表管理')}
+				<i class="fa fa-list-alt"></i> ${text('客户管理')}
 			</div>
 			<div class="box-tools pull-right">
 				<a href="#" class="btn btn-default" id="btnSearch" title="${text('查询')}"><i class="fa fa-filter"></i> ${text('查询')}</a>
 				<% if(hasPermi('customer:customer:edit')){ %>
-					<a href="${ctx}/customer/customer/form" class="btn btn-default btnTool" title="${text('新增客户表')}"><i class="fa fa-plus"></i> ${text('新增')}</a>
+					<a href="${ctx}/customer/customer/form" class="btn btn-default btnTool" title="${text('新增客户')}"><i class="fa fa-plus"></i> ${text('新增')}</a>
 				<% } %>
 			</div>
 		</div>
@@ -56,7 +56,7 @@ $('#dataGrid').dataGrid({
 	searchForm: $("#searchForm"),
 	columnModel: [
 		{header:'${text("客户名称")}', name:'name', index:'a.name', width:150, align:"left", frozen:true, formatter: function(val, obj, row, act){
-			return '<a href="${ctx}/customer/customer/form?id='+row.id+'" class="btnList" data-title="${text("编辑客户表")}">'+(val||row.id)+'</a>';
+			return '<a href="${ctx}/customer/customer/form?id='+row.id+'" class="btnList" data-title="${text("编辑客户")}">'+(val||row.id)+'</a>';
 		}},
 		{header:'${text("车牌号")}', name:'plateNumber', index:'a.plate_number', width:150, align:"left"},
 		{header:'${text("客户地址")}', name:'address', index:'a.address', width:150, align:"left"},
@@ -72,8 +72,8 @@ $('#dataGrid').dataGrid({
 		{header:'${text("操作")}', name:'actions', width:120, sortable:false, title:false, formatter: function(val, obj, row, act){
 			var actions = [];
 			<% if(hasPermi('customer:customer:edit')){ %>
-				actions.push('<a href="${ctx}/customer/customer/form?id='+row.id+'" class="btnList" title="${text("编辑客户表")}"><i class="fa fa-pencil"></i></a>&nbsp;');
-				actions.push('<a href="${ctx}/customer/customer/delete?id='+row.id+'" class="btnList" title="${text("删除客户表")}" data-confirm="${text("确认要删除该客户表吗？")}"><i class="fa fa-trash-o"></i></a>&nbsp;');
+				actions.push('<a href="${ctx}/customer/customer/form?id='+row.id+'" class="btnList" title="${text("编辑客户")}"><i class="fa fa-pencil"></i></a>&nbsp;');
+				actions.push('<a href="${ctx}/customer/customer/delete?id='+row.id+'" class="btnList" title="${text("删除客户")}" data-confirm="${text("确认要删除该客户吗？")}"><i class="fa fa-trash-o"></i></a>&nbsp;');
 			<% } %>
 			return actions.join('');
 		}}
