去掉多余的表字

--- a/src/main/resources/views/modules/charging/chargingItemSelect.html
+++ b/src/main/resources/views/modules/charging/chargingItemSelect.html
@@ -59,7 +59,7 @@
         ajaxSuccess: function(data){
 
         },
-		// 双击表格行时调用（id：双击的行号，rownum：双击的行位置，column：双击的列）
+		// 双击格行时调用（id：双击的行号，rownum：双击的行位置，column：双击的列）
 		ondblClickRow: function(id, rownum, colnum, event){
 
 			var data = $('#dataGrid').dataGrid('getRowData', id);
