--- a/src/main/resources/views/modules/charging/chargingItemsForm.html
+++ b/src/main/resources/views/modules/charging/chargingItemsForm.html
@@ -1,9 +1,9 @@
-<% layout('/layouts/default.html', {title: '检查项目表管理', libs: ['validate']}){ %>
+<% layout('/layouts/default.html', {title: '检查项目管理', libs: ['validate']}){ %>
 <div class="main-content">
 	<div class="box box-main">
 		<div class="box-header with-border">
 			<div class="box-title">
-				<i class="fa fa-list-alt"></i> ${text(chargingItems.isNewRecord ? '新增检查项目表' : '编辑检查项目表')}
+				<i class="fa fa-list-alt"></i> ${text(chargingItems.isNewRecord ? '新增检查项目' : '编辑检查项目')}
 			</div>
 			<div class="box-tools pull-right">
 				<button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
