--- a/src/main/resources/views/modules/car/carTypeForm.html
+++ b/src/main/resources/views/modules/car/carTypeForm.html
@@ -1,9 +1,9 @@
-<% layout('/layouts/default.html', {title: '车型表管理', libs: ['validate']}){ %>
+<% layout('/layouts/default.html', {title: '车型管理', libs: ['validate']}){ %>
 <div class="main-content">
 	<div class="box box-main">
 		<div class="box-header with-border">
 			<div class="box-title">
-				<i class="fa fa-list-alt"></i> ${text(carType.isNewRecord ? '新增车型表' : '编辑车型表')}
+				<i class="fa fa-list-alt"></i> ${text(carType.isNewRecord ? '新增车型' : '编辑车型')}
 			</div>
 			<div class="box-tools pull-right">
 				<button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
