--- a/src/main/resources/views/modules/customer/customerForm.html
+++ b/src/main/resources/views/modules/customer/customerForm.html
@@ -1,9 +1,9 @@
-<% layout('/layouts/default.html', {title: '客户表管理', libs: ['validate']}){ %>
+<% layout('/layouts/default.html', {title: '客户管理', libs: ['validate']}){ %>
 <div class="main-content">
 	<div class="box box-main">
 		<div class="box-header with-border">
 			<div class="box-title">
-				<i class="fa fa-list-alt"></i> ${text(customer.isNewRecord ? '新增客户表' : '编辑客户表')}
+				<i class="fa fa-list-alt"></i> ${text(customer.isNewRecord ? '新增客户' : '编辑客户')}
 			</div>
 			<div class="box-tools pull-right">
 				<button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
