第一版修改

--- a/src/main/resources/views/modules/charging/chargingItemsList.html
+++ b/src/main/resources/views/modules/charging/chargingItemsList.html
@@ -64,6 +64,7 @@ $('#dataGrid').dataGrid({
 		{header:'${text("项目名称")}', name:'itemName', index:'a.item_name', width:150, align:"left", frozen:true, formatter: function(val, obj, row, act){
 			return '<a href="${ctx}/charging/chargingItems/form?id='+row.id+'" class="btnList" data-title="${text("编辑检查项目")}">'+(val||row.id)+'</a>';
 		}},
+		{header:'${text("项目编号")}', name:'code', index:'a.code', width:150, align:"center"},
 		{header:'${text("数量")}', name:'num', index:'a.num', width:150, align:"center"},
 		{header:'${text("金额")}', name:'price', index:'a.price', width:150, align:"right", formatter: function(val, obj, row, act){
 			return js.formatNumber(val, 2, false, ''); // 数值类型格式化 (原始数值, 小数位数, 是否千分位, 默认值，金额情况下设置0.00);
