--- a/src/main/resources/views/modules/check/checkBillForm.html
+++ b/src/main/resources/views/modules/check/checkBillForm.html
@@ -60,7 +60,7 @@
 							<label class="control-label col-sm-4" title="">
 								<span class="required hide">*</span> ${text('联系方式')}：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-								<#form:input id="customerPhoneNumber" readonly="true" path="customerPhoneNumber" maxlength="20" class="form-control mobile"/>
+								<#form:input id="customerPhoneNumber" path="customerPhoneNumber" maxlength="20" class="form-control mobile"/>
 							</div>
 						</div>
 					</div>
@@ -69,7 +69,7 @@
 							<label class="control-label col-sm-4" title="">
 								<span class="required hide">*</span> ${text('客户地址')}：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-								<#form:input id="customerAddress" readonly="true" path="customerAddress" maxlength="200" class="form-control"/>
+								<#form:input id="customerAddress"  path="customerAddress" maxlength="200" class="form-control"/>
 							</div>
 						</div>
 					</div>
@@ -78,12 +78,13 @@
 					<div class="col-xs-6">
 						<div class="form-group">
 							<label class="control-label col-sm-4" title="">
-								<span class="required ">*</span> ${text('车型')}：<i class="fa icon-question hide"></i></label>
+								<span class="required hide">*</span> ${text('车型')}：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-								<#form:input id="carType" readonly="true" path="carType" maxlength="100" class="form-control required"/>
+								<#form:select path="carType" dictType="" items="${carTypeList}" itemLabel="typeName" itemValue="typeName" blankOption="true" class="form-control" />
 							</div>
 						</div>
 					</div>
+
 					<div class="col-xs-6">
 						<div class="form-group">
 							<label class="control-label col-sm-4" title="">
@@ -231,7 +232,7 @@ $("#checkBillItemDataGridAddRowBtn").click(function () {
 
 
 			var itemId_element = getElement(rowId,'itemId');
-			$(itemId_element).val(itemJson.id);
+			$(itemId_element).val(itemJson.code);
 			$(itemId_element).attr('readonly','readonly');
 
 			var num_element = getElement(rowId,'num');
