--- a/src/main/resources/views/modules/customer/customerList.html
+++ b/src/main/resources/views/modules/customer/customerList.html
@@ -58,11 +58,10 @@ $('#dataGrid').dataGrid({
 		{header:'${text("客户名称")}', name:'name', index:'a.name', width:150, align:"left", frozen:true, formatter: function(val, obj, row, act){
 			return '<a href="${ctx}/customer/customer/form?id='+row.id+'" class="btnList" data-title="${text("编辑客户")}">'+(val||row.id)+'</a>';
 		}},
+		{header:'${text("客户编号")}', name:'code', index:'a.code', width:150, align:"center"},
 		{header:'${text("车牌号")}', name:'plateNumber', index:'a.plate_number', width:150, align:"left"},
 		{header:'${text("客户地址")}', name:'address', index:'a.address', width:150, align:"left"},
-		{header:'${text("车型")}', name:'carType', index:'a.car_type', width:150, align:"center", formatter: function(val, obj, row, act){
-			return js.getDictLabel(${@DictUtils.getDictListJson('')}, val, '${text("未知")}', true);
-		}},
+		{header:'${text("车型")}', name:'carType', index:'a.car_type', width:150, align:"center"},
 		{header:'${text("联系电话")}', name:'phoneNumber', index:'a.phone_number', width:150, align:"center"},
 		{header:'${text("状态")}', name:'status', index:'a.status', width:150, align:"center", formatter: function(val, obj, row, act){
 			return js.getDictLabel(${@DictUtils.getDictListJson('sys_search_status')}, val, '${text("未知")}', true);
