--- a/src/main/resources/views/modules/check/checkBillList.html
+++ b/src/main/resources/views/modules/check/checkBillList.html
@@ -25,10 +25,10 @@
 				<div class="form-group">
 					<label class="control-label">${text('检测时间')}：</label>
 					<div class="control-inline">
-						<#form:input path="checkTime_gte" readonly="true" maxlength="20" class="form-control Wdate-datetime"
-							dataFormat="datetime" onclick="WdatePicker({dateFmt:'yyyy-MM-dd',isShowClear:false,onpicked:function(){checkTime_lte.click()}});"/>
+						<#form:input id="checkTime_gte" path="checkTime_gte" readonly="true" maxlength="20" class="form-control Wdate-datetime"
+							dataFormat="datetime" onclick="WdatePicker({startDate:'%y-%M-01',dateFmt:'yyyy-MM-dd',isShowClear:false,onpicked:function(){checkTime_lte.click()}});"/>
 						&nbsp;--&nbsp;
-						<#form:input path="checkTime_lte" readonly="true" maxlength="20" class="form-control Wdate-datetime"
+						<#form:input id="checkTime_lte" path="checkTime_lte" readonly="true" maxlength="20" class="form-control Wdate-datetime"
 							dataFormat="datetime" onclick="WdatePicker({dateFmt:'yyyy-MM-dd',isShowClear:false});"/>
 					</div>
 				</div>
@@ -68,6 +68,7 @@ $('#dataGrid').dataGrid({
 		{header:'${text("联系方式")}', name:'customerPhoneNumber', index:'a.customer_phone_number', width:150, align:"center"},
 		{header:'${text("客户地址")}', name:'customerAddress', index:'a.customer_address', width:150, align:"left"},
 		{header:'${text("车型")}', name:'carType', index:'a.car_type', width:150, align:"center"},
+		{header:'${text("实收金额(元)")}', name:'totalAmt', index:'a.total_amt', width:150, align:"center"},
 		{header:'${text("操作")}', name:'actions', width:120, sortable:false, title:false, align:"center", formatter: function(val, obj, row, act){
 			var actions = [];
 			<% if(hasPermi('check:checkBill:edit')){ %>
@@ -102,20 +103,34 @@ function tuidan(obj) {
 		}
 
 	}, 'json', true, '正在退单...');
-
-
-	/*js.ajaxSubmit("${ctx}/check/checkBill/refund",{checkBillId:checkBillId},function (data) {
-		if(data.result == 'true'){
-			js.alert(data.message, null, function () {
-				$('#dataGrid').dataGrid('reloadGrid');
-			});
-		}else {
-			js.alert(data.message)
-		}
-	})*/
-
-
 }
 
+
+// 对Date的扩展，将 Date 转化为指定格式的String
+// 月(M)、日(d)、小时(h)、分(m)、秒(s)、季度(q) 可以用 1-2 个占位符，
+// 年(y)可以用 1-4 个占位符，毫秒(S)只能用 1 个占位符(是 1-3 位的数字)
+Date.prototype.Format = function (fmt) { //author: meizz
+	var o = {
+		"M+": this.getMonth() + 1, //月份
+		"d+": this.getDate(), //日
+		"H+": this.getHours(), //小时
+		"m+": this.getMinutes(), //分
+		"s+": this.getSeconds(), //秒
+		"q+": Math.floor((this.getMonth() + 3) / 3), //季度
+		"S": this.getMilliseconds() //毫秒
+	};
+	if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
+	for (var k in o)
+		if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+	return fmt;
+}
+
+$(document).ready(function (){
+
+	log(new Date().Format("yyyy-MM-dd"));
+	$("#checkTime_gte").val(new Date().Format("yyyy-MM-dd"));
+	$("#checkTime_lte").val(new Date().Format("yyyy-MM-dd"));
+
+});
 
 </script>
