--- a/src/main/resources/views/modules/check/checkBillList.html
+++ b/src/main/resources/views/modules/check/checkBillList.html
@@ -25,10 +25,10 @@
 				<div class="form-group">
 					<label class="control-label">${text('检测时间')}：</label>
 					<div class="control-inline">
-						<#form:input id="checkTime_gte" path="checkTime_gte" readonly="true" maxlength="20" class="form-control Wdate-datetime"
+						<#form:input id="checkTime_gte" value="" path="checkTime_gte" readonly="true" maxlength="20" class="form-control Wdate-datetime"
 							dataFormat="datetime" onclick="WdatePicker({startDate:'%y-%M-01',dateFmt:'yyyy-MM-dd',isShowClear:false,onpicked:function(){checkTime_lte.click()}});"/>
 						&nbsp;--&nbsp;
-						<#form:input id="checkTime_lte" path="checkTime_lte" readonly="true" maxlength="20" class="form-control Wdate-datetime"
+						<#form:input id="checkTime_lte" value="" path="checkTime_lte" readonly="true" maxlength="20" class="form-control Wdate-datetime"
 							dataFormat="datetime" onclick="WdatePicker({dateFmt:'yyyy-MM-dd',isShowClear:false});"/>
 					</div>
 				</div>
@@ -46,7 +46,7 @@
 				</div>
 				<div class="form-group">
 					<button type="submit" class="btn btn-primary btn-sm">${text('查询')}</button>
-					<button type="reset" class="btn btn-default btn-sm">${text('重置')}</button>
+					<button id="reset" type="reset" class="btn btn-default btn-sm">${text('重置')}</button>
 				</div>
 			</#form:form>
 			<table id="dataGrid"></table>
@@ -56,6 +56,28 @@
 </div>
 <% } %>
 <script>
+	// 对Date的扩展，将 Date 转化为指定格式的String
+	// 月(M)、日(d)、小时(h)、分(m)、秒(s)、季度(q) 可以用 1-2 个占位符，
+	// 年(y)可以用 1-4 个占位符，毫秒(S)只能用 1 个占位符(是 1-3 位的数字)
+	Date.prototype.Format = function (fmt) { //author: meizz
+		var o = {
+			"M+": this.getMonth() + 1, //月份
+			"d+": this.getDate(), //日
+			"H+": this.getHours(), //小时
+			"m+": this.getMinutes(), //分
+			"s+": this.getSeconds(), //秒
+			"q+": Math.floor((this.getMonth() + 3) / 3), //季度
+			"S": this.getMilliseconds() //毫秒
+		};
+		if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
+		for (var k in o)
+			if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+		return fmt;
+	}
+
+	setQueryTimeValue();
+
+
 // 初始化DataGrid对象
 $('#dataGrid').dataGrid({
 	searchForm: $("#searchForm"),
@@ -81,7 +103,7 @@ $('#dataGrid').dataGrid({
 	// 加载成功后执行事件
 	ajaxSuccess: function(data){
 		
-	}
+	},
 });
 
 $('#exportButton').click(function () {
@@ -105,32 +127,17 @@ function tuidan(obj) {
 	}, 'json', true, '正在退单...');
 }
 
-
-// 对Date的扩展，将 Date 转化为指定格式的String
-// 月(M)、日(d)、小时(h)、分(m)、秒(s)、季度(q) 可以用 1-2 个占位符，
-// 年(y)可以用 1-4 个占位符，毫秒(S)只能用 1 个占位符(是 1-3 位的数字)
-Date.prototype.Format = function (fmt) { //author: meizz
-	var o = {
-		"M+": this.getMonth() + 1, //月份
-		"d+": this.getDate(), //日
-		"H+": this.getHours(), //小时
-		"m+": this.getMinutes(), //分
-		"s+": this.getSeconds(), //秒
-		"q+": Math.floor((this.getMonth() + 3) / 3), //季度
-		"S": this.getMilliseconds() //毫秒
-	};
-	if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
-	for (var k in o)
-		if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
-	return fmt;
-}
-
-$(document).ready(function (){
-
-	log(new Date().Format("yyyy-MM-dd"));
-	$("#checkTime_gte").val(new Date().Format("yyyy-MM-dd"));
-	$("#checkTime_lte").val(new Date().Format("yyyy-MM-dd"));
-
+$("#searchForm").submit(function () {
+	var param = $("#searchForm").serialize();
+	js.ajaxSubmit("${ctx}/check/checkBill/getStatistics",param,function (data) {
+		log(data);
+	})
 });
+
+	function setQueryTimeValue(){
+		$("#checkTime_gte").attr("value",new Date().Format("yyyy-MM-dd"));
+		$("#checkTime_lte").attr("value",new Date().Format("yyyy-MM-dd"));
+	}
+
 
 </script>
