--- a/src/main/resources/views/modules/charging/chargingItemsForm.html
+++ b/src/main/resources/views/modules/charging/chargingItemsForm.html
@@ -23,21 +23,11 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="col-xs-6">
 						<div class="form-group">
 							<label class="control-label col-sm-4" title="">
-								<span class="required hide">*</span> ${text('数量')}：<i class="fa icon-question hide"></i></label>
-							<div class="col-sm-8">
-								<#form:input path="num" maxlength="11" class="form-control digits"/>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-6">
-						<div class="form-group">
-							<label class="control-label col-sm-4" title="">
-								<span class="required hide">*</span> ${text('金额')}：<i class="fa icon-question hide"></i></label>
+								<span class="required hide">*</span> ${text('单价')}：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
 								<#form:input path="price" class="form-control number"/>
 							</div>
