--- a/src/main/resources/views/modules/charging/chargingItemsList.html
+++ b/src/main/resources/views/modules/charging/chargingItemsList.html
@@ -22,13 +22,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="control-label">${text('数量')}：</label>
-					<div class="control-inline">
-						<#form:input path="num" maxlength="11" class="form-control width-120"/>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label">${text('金额')}：</label>
+					<label class="control-label">${text('单价')}：</label>
 					<div class="control-inline">
 						<#form:input path="price" class="form-control width-120"/>
 					</div>
@@ -65,8 +59,7 @@ $('#dataGrid').dataGrid({
 			return '<a href="${ctx}/charging/chargingItems/form?id='+row.id+'" class="btnList" data-title="${text("编辑检查项目")}">'+(val||row.id)+'</a>';
 		}},
 		{header:'${text("项目编号")}', name:'code', index:'a.code', width:150, align:"center"},
-		{header:'${text("数量")}', name:'num', index:'a.num', width:150, align:"center"},
-		{header:'${text("金额")}', name:'price', index:'a.price', width:150, align:"right", formatter: function(val, obj, row, act){
+		{header:'${text("单价")}', name:'price', index:'a.price', width:150, align:"right", formatter: function(val, obj, row, act){
 			return js.formatNumber(val, 2, false, ''); // 数值类型格式化 (原始数值, 小数位数, 是否千分位, 默认值，金额情况下设置0.00);
 		}},
 		{header:'${text("状态")}', name:'status', index:'a.status', width:150, align:"center", formatter: function(val, obj, row, act){
