电话号吗，手机号码验证

--- a/src/main/resources/views/modules/check/checkBillForm.html
+++ b/src/main/resources/views/modules/check/checkBillForm.html
@@ -60,7 +60,7 @@
 							<label class="control-label col-sm-4" title="">
 								<span class="required hide">*</span> ${text('联系方式')}：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-								<#form:input id="customerPhoneNumber" path="customerPhoneNumber" maxlength="20" class="form-control mobile"/>
+								<#form:input id="customerPhoneNumber" path="customerPhoneNumber" maxlength="20" class="form-control phone"/>
 							</div>
 						</div>
 					</div>
