--- a/src/main/resources/views/modules/customer/customerForm.html
+++ b/src/main/resources/views/modules/customer/customerForm.html
@@ -59,7 +59,7 @@
 							<label class="control-label col-sm-4" title="">
 								<span class="required ">*</span> ${text('联系电话')}：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-								<#form:input path="phoneNumber" maxlength="11" class="form-control required mobile"/>
+								<#form:input path="phoneNumber" maxlength="11" class="form-control required phone"/>
 							</div>
 						</div>
 					</div>
