--- a/src/main/resources/views/modules/print/sheet001.html
+++ b/src/main/resources/views/modules/print/sheet001.html
@@ -49,7 +49,7 @@ rt
 <![endif]>
 </head>
 
-<body link="#0563C1" vlink="#954F72" class=xl65>
+<body link="#0563C1" vlink="#954F72" class=xl65 style="margin-left: 25px;">
 <table border=0 cellpadding=0 cellspacing=0 width=775 style='border-collapse:
  collapse;table-layout:fixed;width:582pt'>
  <col class=xl65 width=68 style='mso-width-source:userset;mso-width-alt:2176;
@@ -152,7 +152,7 @@ rt
   <td height=20 class=xl72 style='height:15.0pt;border-top:none'>合计</td>
   <td colspan=5 class=xl76 style='border-right:.5pt solid black;border-left:
   none'><span id="money"><span</td>
-  <td class=xl73 style='border-top:none;border-left:none'>${checkBill.totalAmt} </td>
+  <td class=xl73 style='border-top:none;border-left:none'>${checkBill.totalAmtStr} </td>
   <td colspan=2 class=xl74 style='border-right:.5pt solid black;border-left:
   none'>　</td>
  </tr>
